--- a/MarioAndFighter/MarioAndFighter.vcxproj.filters
+++ b/MarioAndFighter/MarioAndFighter.vcxproj.filters
@@ -1,31 +1,71 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="GameObj">
+      <UniqueIdentifier>{a1fa6b89-577e-4561-954c-dce464fc6bee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Core">
+      <UniqueIdentifier>{d33cffd1-e34c-4555-89a5-2ff1e4f8442f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Manager">
+      <UniqueIdentifier>{33d75952-d282-4236-ba81-0e468e5ab329}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MarioAndFighterApp.cpp" />
-    <ClCompile Include="D2D1Core.cpp" />
-    <ClCompile Include="Bitmap.cpp" />
-    <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="GameWnd.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="FPSManager.cpp" />
-    <ClCompile Include="GameManager.cpp" />
-    <ClCompile Include="Text.cpp" />
+    <ClCompile Include="Bitmap.cpp">
+      <Filter>GameObj</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>GameObj</Filter>
+    </ClCompile>
+    <ClCompile Include="Sprite.cpp">
+      <Filter>GameObj</Filter>
+    </ClCompile>
+    <ClCompile Include="Text.cpp">
+      <Filter>GameObj</Filter>
+    </ClCompile>
+    <ClCompile Include="D2D1Core.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
+    <ClCompile Include="FPSManager.cpp">
+      <Filter>Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="GameManager.cpp">
+      <Filter>Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="GameWnd.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MarioAndFighterApp.h" />
-    <ClInclude Include="D2D1Core.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Bitmap.h" />
-    <ClInclude Include="Sprite.h" />
-    <ClInclude Include="GameWnd.h" />
-    <ClInclude Include="FPSManager.h" />
-    <ClInclude Include="GameManager.h" />
-    <ClInclude Include="Text.h" />
+    <ClInclude Include="Type.h" />
+    <ClInclude Include="Bitmap.h">
+      <Filter>GameObj</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>GameObj</Filter>
+    </ClInclude>
+    <ClInclude Include="Sprite.h">
+      <Filter>GameObj</Filter>
+    </ClInclude>
+    <ClInclude Include="Text.h">
+      <Filter>GameObj</Filter>
+    </ClInclude>
+    <ClInclude Include="D2D1Core.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="FPSManager.h">
+      <Filter>Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="GameManager.h">
+      <Filter>Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="GameWnd.h">
+      <Filter>Core</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
