--- a/MarioAndFighter/MarioAndFighter.vcxproj
+++ b/MarioAndFighter/MarioAndFighter.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="FileUtils.h" />
     <ClInclude Include="FPSManager.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameSceen.h" />
     <ClInclude Include="GameWnd.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MarioAndFighterApp.h" />
@@ -154,6 +155,7 @@
     <ClCompile Include="FileUtils.cpp" />
     <ClCompile Include="FPSManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameSceen.cpp" />
     <ClCompile Include="GameWnd.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
