--- a/MarioAndFighter/MarioAndFighter.vcxproj
+++ b/MarioAndFighter/MarioAndFighter.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="LoadingSceen.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MarioAndFighterApp.h" />
+    <ClInclude Include="Missile.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MarioAndFighterApp.cpp" />
+    <ClCompile Include="Missile.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ResourceManger.cpp" />
