--- a/MarioAndFighter/MarioAndFighter.vcxproj.filters
+++ b/MarioAndFighter/MarioAndFighter.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="LoadingSceen.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Missile.cpp">
+      <Filter>GameObj</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MarioAndFighterApp.h" />
@@ -129,6 +132,9 @@
     <ClInclude Include="Monster.h" />
     <ClInclude Include="LoadingSceen.h">
       <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Missile.h">
+      <Filter>GameObj</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
