--- a/MarioAndFighter/MarioAndFighter.vcxproj
+++ b/MarioAndFighter/MarioAndFighter.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="MarioAndFighterApp.h" />
     <ClInclude Include="Missile.h" />
+    <ClInclude Include="MissileMonster.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
@@ -165,6 +166,7 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MarioAndFighterApp.cpp" />
     <ClCompile Include="Missile.cpp" />
+    <ClCompile Include="MissileMonster.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ResourceManger.cpp" />
